--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,23 +5,23 @@
   .main-title {
     font-size: 3rem;
   }
-  
+
   .section-title {
     font-size: 2rem;
   }
-  
+
   .counter-item {
     min-width: 100px;
   }
-  
+
   .timeline-container::before {
     left: 30px;
   }
-  
+
   .timeline-dot {
     left: 30px;
   }
-  
+
   .timeline-date {
     width: 100%;
     position: relative;
@@ -30,17 +30,17 @@
     top: -10px;
     margin-bottom: 10px;
   }
-  
+
   .timeline-content {
     width: calc(100% - 70px);
     margin-left: 70px;
   }
-  
+
   .timeline-item:nth-child(even) .timeline-date {
     left: 70px;
     right: auto;
   }
-  
+
   .timeline-item:nth-child(even) .timeline-content {
     margin-left: 70px;
     margin-right: 0;
@@ -52,37 +52,37 @@
   .main-title {
     font-size: 2.5rem;
   }
-  
+
   .couple-container {
     flex-direction: column;
   }
-  
+
   .person {
     margin: 20px 0;
   }
-  
+
   .heart-container {
     margin: 10px 0;
   }
-  
+
   .counter-container {
     flex-direction: column;
     align-items: center;
   }
-  
+
   .counter-item {
     width: 80%;
     max-width: 300px;
   }
-  
+
   .gallery-container {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   }
-  
+
   .notes-display {
     grid-template-columns: 1fr;
   }
-  
+
   .modal-content {
     width: 95%;
   }
@@ -93,32 +93,32 @@
   .main-title {
     font-size: 2rem;
   }
-  
+
   .section-title {
     font-size: 1.8rem;
   }
-  
+
   .avatar-container {
     width: 120px;
     height: 120px;
   }
-  
+
   .name {
     font-size: 1.5rem;
   }
-  
+
   .counter-item span {
     font-size: 2rem;
   }
-  
+
   .timeline-content {
     padding: 15px;
   }
-  
+
   .timeline-content h3 {
     font-size: 1.2rem;
   }
-  
+
   .btn-add-note {
     width: 100%;
   }
@@ -131,7 +131,7 @@
     min-height: 100vh;
     padding: 50px 0;
   }
-  
+
   .couple-container {
     flex-direction: row;
   }
@@ -142,30 +142,29 @@
   .container {
     max-width: 1320px;
   }
-  
+
   .main-title {
     font-size: 5rem;
   }
-  
+
   .section-title {
     font-size: 3rem;
   }
-  
+
   .avatar-container {
     width: 180px;
     height: 180px;
   }
-  
+
   .counter-item {
     min-width: 150px;
   }
-  
+
   .counter-item span {
     font-size: 3rem;
   }
 }
 /* responsive.css - Responsive styles for Kỷ Niệm Hẹn Hò website */
 /* Thiết kế và phát triển bởi IT(K) */
-/* Copyright © 2023 IT(K). All rights reserved. */
+/* Copyright © 2023 IT(K).
 
-/* Các style khác giữ nguyên... */
