--- a/css/style.css
+++ b/css/style.css
@@ -923,3 +923,16 @@ section:nth-child(even) {
   z-index: 10;
   position: relative;
 }
+/* album */
+
+.swiper {
+  width: 80%;
+  max-width: 600px;
+  border-radius: 10px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+}
+.swiper-slide img {
+  width: 80%;
+  background-position: center;
+  border-radius: 10px;
+}
